--- a/getdinerotoday/templates/homepage.html
+++ b/getdinerotoday/templates/homepage.html
@@ -32,7 +32,7 @@
                         <p class="card-text">Click The Button Below To Enter The Fitness Portal</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/fitness" target="_blank" class="btn btn-primary">
+                                <a href="/fitness" class="btn btn-primary">
                                     Enter Portal
                                 </a>
                             </div>
@@ -48,7 +48,7 @@
                         <p class="card-text">Click The Button Below To Enter The Medical Portal</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/medical" target="_blank" class="btn btn-primary">
+                                <a href="/medical" class="btn btn-primary">
                                     Enter Portal
                                 </a>
                             </div>
@@ -64,7 +64,7 @@
                         <p class="card-text">Click The Button Below To Enter The Real Estate Portal</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/real_estate" target="_blank" class="btn btn-primary">Enter Portal</a>
+                                <a href="/real_estate" class="btn btn-primary">Enter Portal</a>
                             </div>
                         </div>
                     </div>
@@ -79,7 +79,7 @@
                         <p class="card-text">Click The Button Below To Enter The Restaurant &amp; Catering Portal</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/restaurant_catering" target="_blank" class="btn btn-primary">Enter Portal</a>
+                                <a href="/restaurant_catering" class="btn btn-primary">Enter Portal</a>
                             </div>
                         </div>
                     </div>
@@ -93,7 +93,7 @@
                         <p class="card-text">Click The Button Below To Enter The Automotive Portal</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/automotive" target="_blank" class="btn btn-primary">Enter Portal</a>
+                                <a href="/automotive" class="btn btn-primary">Enter Portal</a>
                             </div>
                         </div>
                     </div>
@@ -107,7 +107,7 @@
                         <p class="card-text">Click The Button Below To Enter The Car Dealership Portal</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/automotive" target="_blank" class="btn btn-primary">Enter Portal</a>
+                                <a href="/automotive" class="btn btn-primary">Enter Portal</a>
                             </div>
                         </div>
                     </div>
@@ -121,7 +121,7 @@
                         <p class="card-text">Click The Button Below To Enter The Trucking Portal</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/trucking" target="_blank" class="btn btn-primary">Enter Portal</a>
+                                <a href="/trucking" class="btn btn-primary">Enter Portal</a>
                             </div>
                         </div>
                     </div>
@@ -135,7 +135,7 @@
                         <p class="card-text">Click The Button Below To Enter The Hair Salon Portal</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/hair_salon" target="_blank" class="btn btn-primary">Enter Portal</a>
+                                <a href="/hair_salon" class="btn btn-primary">Enter Portal</a>
                             </div>
                         </div>
                     </div>
@@ -150,7 +150,7 @@
                         <p class="card-text">Click The Button Below To Enter The Lawyer Portal</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/lawyer" target="_blank" class="btn btn-primary">Enter Portal</a>
+                                <a href="/lawyer" class="btn btn-primary">Enter Portal</a>
                             </div>
                         </div>
                     </div>
@@ -165,7 +165,7 @@
                         <p class="card-text">Click The Button Below To Enter The Photography Portal</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/photography" target="_blank" class="btn btn-primary">Enter Portal</a>
+                                <a href="/photography" class="btn btn-primary">Enter Portal</a>
                             </div>
                         </div>
                     </div>
@@ -179,7 +179,7 @@
                         <p class="card-text">Click The Button Below To Enter The Transportation Portal</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/transportation" target="_blank" class="btn btn-primary">Enter Portal</a>
+                                <a href="/transportation" class="btn btn-primary">Enter Portal</a>
                             </div>
                         </div>
                     </div>
@@ -193,7 +193,7 @@
                         <p class="card-text">Click The Button Below To Enter The Electrician Portal</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/handy_man" target="_blank" class="btn btn-primary">Enter Portal</a>
+                                <a href="/handy_man" class="btn btn-primary">Enter Portal</a>
                             </div>
                         </div>
                     </div>
@@ -208,7 +208,7 @@
                         <p class="card-text">Click The Button Below To Enter The Landscaping Portal</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/handy_man" target="_blank" class="btn btn-primary">Enter Portal</a>
+                                <a href="/handy_man" class="btn btn-primary">Enter Portal</a>
                             </div>
                         </div>
                     </div>
@@ -222,7 +222,7 @@
                         <p class="card-text">Click The Button Below To Enter The eCommerce Portal</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/ecommerce" target="_blank" class="btn btn-primary">Enter Portal</a>
+                                <a href="/ecommerce" class="btn btn-primary">Enter Portal</a>
                             </div>
                         </div>
                     </div>
@@ -236,7 +236,7 @@
                         <p class="card-text">Click The Button Below To Enter The Musician Portal</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/musician" target="_blank" class="btn btn-primary">Enter Portal</a>
+                                <a href="/musician" class="btn btn-primary">Enter Portal</a>
                             </div>
                         </div>
                     </div>
@@ -250,7 +250,7 @@
                         <p class="card-text">Click The Button Below To Enter The Insurance Agent Portal</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/insurance_agent" target="_blank" class="btn btn-primary">Enter Portal</a>
+                                <a href="/insurance_agent" class="btn btn-primary">Enter Portal</a>
                             </div>
                         </div>
                     </div>
@@ -265,7 +265,7 @@
                         <p class="card-text">Click The Button Below To Enter The Handy Man Services Portal</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/handy_man" target="_blank" class="btn btn-primary">Enter Portal</a>
+                                <a href="/handy_man" class="btn btn-primary">Enter Portal</a>
                             </div>
                         </div>
                     </div>
@@ -279,7 +279,7 @@
                         <p class="card-text">Click The Button Below To Enter The Accountant Portal</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/accountant" target="_blank" class="btn btn-primary">Enter Portal</a>
+                                <a href="/accountant" class="btn btn-primary">Enter Portal</a>
                             </div>
                         </div>
                     </div>
@@ -293,7 +293,7 @@
                         <p class="card-text">Click The Button Below To Enter The Dentist Portal</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/medical" target="_blank" class="btn btn-primary">Enter Portal</a>
+                                <a href="/medical" class="btn btn-primary">Enter Portal</a>
                             </div>
                         </div>
                     </div>
@@ -307,7 +307,7 @@
                         <p class="card-text">Click The Button Below To Enter The Carpet &amp; Flooring Portal</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/handy_man" target="_blank" class="btn btn-primary">Enter Portal</a>
+                                <a href="/handy_man" class="btn btn-primary">Enter Portal</a>
                             </div>
                         </div>
                     </div>
@@ -321,7 +321,7 @@
                         <p class="card-text">Click The Button Below To Enter The Cannabis Portal</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/cannabis" target="_blank" class="btn btn-primary">Enter Portal</a>
+                                <a href="/cannabis" class="btn btn-primary">Enter Portal</a>
                             </div>
                         </div>
                     </div>
@@ -335,7 +335,7 @@
                         <p class="card-text">Click The Button Below To Enter The Wholesaler Portal</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/ecommerce" target="_blank" class="btn btn-primary">Enter Portal</a>
+                                <a href="/ecommerce" class="btn btn-primary">Enter Portal</a>
                             </div>
                         </div>
                     </div>
@@ -349,7 +349,7 @@
                         <p class="card-text">Click The Button Below To Enter The Barber Portal</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/hair_salon" target="_blank" class="btn btn-primary">Enter Portal</a>
+                                <a href="/hair_salon" class="btn btn-primary">Enter Portal</a>
                             </div>
                         </div>
                     </div>
@@ -363,7 +363,7 @@
                         <p class="card-text">Click The Button Below To Enter The Spa Business Portal</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/hair_salon" target="_blank" class="btn btn-primary">Enter Portal</a>
+                                <a href="/hair_salon" class="btn btn-primary">Enter Portal</a>
                             </div>
                         </div>
                     </div>
@@ -378,7 +378,7 @@
                         <p class="card-text">Click The Button Below To Enter The Physcial Therapist Portal</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/medical" target="_blank" class="btn btn-primary">Enter Portal</a>
+                                <a href="/medical" class="btn btn-primary">Enter Portal</a>
                             </div>
                         </div>
                     </div>
@@ -393,7 +393,7 @@
                         <p class="card-text">Click The Button Below To Enter The Credit Repair Company Portal</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/credit_repair" target="_blank" class="btn btn-primary">Enter Portal</a>
+                                <a href="/credit_repair" class="btn btn-primary">Enter Portal</a>
                             </div>
                         </div>
                     </div>
@@ -408,7 +408,7 @@
                         <p class="card-text">Click The Button Below To Enter The Wedding Planner Portal</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/wedding_planner" target="_blank" class="btn btn-primary">Enter Portal</a>
+                                <a href="/wedding_planner" class="btn btn-primary">Enter Portal</a>
                             </div>
                         </div>
                     </div>
