--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -155,11 +155,11 @@
                     <a href="/{{ request.resolver_match.app_name }}/marketing-business" class="nav-link"> Marketing Your {{ verbose_portal_name }} Business </a>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url 'businesscreditcourse:home' %}" target="_blank" class="nav-link"> Business Credit Building
+                    <a href="{% url 'businesscreditcourse:home' %}" class="nav-link"> Business Credit Building
                         Course </a>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url 'creditcourse:maincreditfile' %}" target="_blank" class="nav-link"> Personal Credit
+                    <a href="{% url 'creditcourse:maincreditfile' %}" class="nav-link"> Personal Credit
                         Course </a>
                 </li>
                 <li class="nav-item">
@@ -170,7 +170,7 @@
                     <a href="/{{ request.resolver_match.app_name }}/apply-loans" class="nav-link"> Apply For Business Loans </a>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url 'covid19:homeone' %}" target="_blank" class="nav-link"> Covid-19 Business Loan Section</a>
+                    <a href="{% url 'covid19:homeone' %}" class="nav-link"> Covid-19 Business Loan Section</a>
                 </li>
                 <!-- <li class="nav-item">
                       <a href="/{{ request.resolver_match.app_name }}/credit-repair-options" class="nav-link"> Sign Up For Credit Repair </a>
@@ -198,16 +198,16 @@
                     <a href="https://getdinerotoday.tapfiliate.com/" target="_blank" class="nav-link"> Go To Affiliate Agent Portal </a>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url 'products:dnbproducts' %}" target="_blank" class="nav-link"> Purchase Dunn & Bradstreet Products</a>
+                    <a href="{% url 'products:dnbproducts' %}" class="nav-link"> Purchase Dunn & Bradstreet Products</a>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url 'onlinetools:onlinetoolshome' %}" target="_blank" class="nav-link"> See Online Tools That Help Grow Your Business</a>
+                    <a href="{% url 'onlinetools:onlinetoolshome' %}" class="nav-link"> See Online Tools That Help Grow Your Business</a>
                 </li>
                 <li class="nav-item">
                     <a href="/{{ request.resolver_match.app_name }}/insurance-products" class="nav-link"> Insurance Products </a>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url 'chromeextension:chromeextensionindex' %}" target="_blank" class="nav-link"> Go To Chrome Extension Portal </a>
+                    <a href="{% url 'chromeextension:chromeextensionindex' %}" class="nav-link"> Go To Chrome Extension Portal </a>
                 </li>
 
                 <li class="nav-item">
