--- a/business/templates/home/businessplan3.html
+++ b/business/templates/home/businessplan3.html
@@ -84,7 +84,7 @@
                             <tr>
                                 <td>Grainger</td>
                                 <td>Dun & Bradstreet</td>
-                                <td><a href="#" target="_blank">
+                                <td><a href="#">
                                     <button type="submit" class="btn btn-primary" name="signup" value="Apply Now">Call
                                         Them To Apply @ (1-800-472-4643)
                                     </button>
