--- a/business/templates/home/my_progress.html
+++ b/business/templates/home/my_progress.html
@@ -80,14 +80,14 @@
                     <div class="card">
                         <div class="card-body">
                             <p>Apply For Loans</p>
-                            <a class="btn btn-primary" href="{% url 'loanportal:loanapplication' %}" target="_blank">Click
+                            <a class="btn btn-primary" href="{% url 'loanportal:loanapplication' %}" >Click
                                 Here To Login To Your Portal To Apply For Loans</a>
                         </div>
                     </div>
                     <div class="card">
                         <div class="card-body">
                             <p>Go To Marketing Couse</p>
-                            <a class="btn btn-primary" href="{% url 'marketingcourse:mainfile' %}" target="_blank">
+                            <a class="btn btn-primary" href="{% url 'marketingcourse:mainfile' %}" >
                                 Click Here To Go To Marketing Course
                             </a>
                         </div>
@@ -95,7 +95,7 @@
                     <div class="card">
                         <div class="card-body">
                             <p>Go To Business Credit Building Course</p>
-                            <a class="btn btn-primary" href="{% url 'businesscreditcourse:home' %}" target="_blank">
+                            <a class="btn btn-primary" href="{% url 'businesscreditcourse:home' %}">
                                 Click Here To Go To The Business Credit Building Course
                             </a>
                         </div>
