--- a/business/templates/marketingYourBusiness.html
+++ b/business/templates/marketingYourBusiness.html
@@ -49,7 +49,7 @@
                         <p class="card-text">Click The Button Below To Go To Our Marketing Course</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a target="_blank" class="btn btn-primary" href="{% url 'marketingcourse:mainfile' %}">Go
+                                <a class="btn btn-primary" href="{% url 'marketingcourse:mainfile' %}">Go
                                     To Marketing Course</a>
                             </div>
                         </div>
@@ -64,7 +64,7 @@
                         <p class="card-text">Click The Button Below To Get $500+ In Advertising Coupons</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a target="_blank" class="btn btn-primary"
+                                <a class="btn btn-primary"
                                    href="{% url 'marketingcourse:coupons' %}">Click Here To
                                     Get <br> $1,000+ In Advertising Coupons</a>
                             </div>
