--- a/business/templates/applyForLoan.html
+++ b/business/templates/applyForLoan.html
@@ -28,7 +28,7 @@
                             Upload Your Documents To See The Best Loans For You</h5>
                         <h5 class="card-title">Prerequisites For A Business Loan: 3 Months In Business & $5,000 In
                             Revenue Per Month</h5>
-                        <a target="_blank" class="btn btn-primary" href="{% url 'loanportal:loanapplication' %}">Click
+                        <a class="btn btn-primary" href="{% url 'loanportal:loanapplication' %}">Click
                             Here To Go To The Loan Portal</a>
                     </div>
                 </div>
