--- a/user/templates/my_progress.html
+++ b/user/templates/my_progress.html
@@ -189,8 +189,7 @@
                         <div class="card mx-2 text-center" style="width: 21rem;">
                             <div class="card-body">
                                 <p>Your Payment Plan Portal</p>
-                                <a class="btn btn-primary" href="{% url 'yourplan:yourplan' %}"
-                                   target="_blank">Click
+                                <a class="btn btn-primary" href="{% url 'yourplan:yourplan' %}" >Click
                                     Here To Go To <br> Your Payment Plan Portal</a>
                             </div>
                         </div>
@@ -198,7 +197,7 @@
                     <div class="card mx-2 text-center" style="width: 21rem;">
                         <div class="card-body">
                             <p>Apply For Loans</p>
-                            <a class="btn btn-primary" href="{% url 'loanportal:loanapplication' %}" target="_blank">Click
+                            <a class="btn btn-primary" href="{% url 'loanportal:loanapplication' %}" >Click
                                 Here To Login To Your <br> Portal To Apply For Loans</a>
                         </div>
                     </div>
@@ -207,7 +206,7 @@
                         <div class="card-body">
                             <p>Google Chrome Extension Portal</p>
                             <a class="btn btn-primary" href="{% url 'chromeextension:chromeextensionindex' %}"
-                               target="_blank">Click
+                               >Click
                                 Here To Go To The <br>Google Chrome Extension Portal</a>
                         </div>
                     </div>
@@ -216,7 +215,7 @@
                         <div class="card-body">
                             <p>Create Your Specific Portal / <br> View Saved Portals</p>
                             <a class="btn btn-primary" href="{% url 'business:create_specific_portal' %}"
-                               target="_blank">
+                               >
                                 Click Here To Create Your Specific <br>Portal & View Your Saved Portals
                             </a>
                         </div>
@@ -224,7 +223,7 @@
                     <div class="card mx-2 text-center" style="width: 21rem;">
                         <div class="card-body">
                             <p>Choose Your Goal With This Platform</p>
-                            <a class="btn btn-primary" href="{% url 'business:goals' %}" target="_blank">
+                            <a class="btn btn-primary" href="{% url 'business:goals' %}" >
                                 Click Here To Choose <br>Your Goal With This Platform
                             </a>
                         </div>
@@ -232,7 +231,7 @@
                     <div class="card mx-2 text-center" style="width: 21rem;">
                         <div class="card-body">
                             <p>Go To Affiliate Agent Portal</p>
-                            <a class="btn btn-primary" href="https://getdinerotoday.tapfiliate.com/" target="_blank">
+                            <a class="btn btn-primary" href="https://getdinerotoday.tapfiliate.com/" target="_blank" >
                                 Click Here To Go To The <br> Affiliate Agent Portal
                             </a>
                         </div>
@@ -240,7 +239,7 @@
                     <div class="card mx-2 text-center" style="width: 21rem;">
                         <div class="card-body">
                             <p>Purchase Dunn & Bradstreet Products</p>
-                            <a class="btn btn-primary" href="{% url 'products:dnbproducts' %}" target="_blank">
+                            <a class="btn btn-primary" href="{% url 'products:dnbproducts' %}">
                                 Click Here To Go Purchase <br> Dunn & Bradstreet Products <br>To Grow Your Business
                             </a>
                         </div>
@@ -248,7 +247,7 @@
                     <div class="card mx-2 text-center" style="width: 21rem;">
                         <div class="card-body">
                             <p>Get The Online Tools To Grow Your Business</p>
-                            <a class="btn btn-primary" href="{% url 'onlinetools:onlinetoolshome' %}" target="_blank">
+                            <a class="btn btn-primary" href="{% url 'onlinetools:onlinetoolshome' %}" >
                                 Click Here To Go To <br>The Online Tools Portal
                             </a>
                         </div>
@@ -256,7 +255,7 @@
                     <div class="card mx-2 text-center" style="width: 21rem;">
                         <div class="card-body">
                             <p>Go To Marketing Couse</p>
-                            <a class="btn btn-primary" href="{% url 'marketingcourse:mainfile' %}" target="_blank">
+                            <a class="btn btn-primary" href="{% url 'marketingcourse:mainfile' %}" >
                                 Click Here To Go To Marketing Course
                             </a>
                         </div>
@@ -264,7 +263,7 @@
                     <div class="card mx-2 text-center" style="width: 21rem;">
                         <div class="card-body">
                             <p>Go To Business Credit Building Course</p>
-                            <a class="btn btn-primary" href="{% url 'businesscreditcourse:home' %}" target="_blank">
+                            <a class="btn btn-primary" href="{% url 'businesscreditcourse:home' %}" >
                                 Click Here To Go To The Business <br> Credit Building Course
                             </a>
                         </div>
